- Remove unnecessary private methods - Refactored List to Immutable list in select stream builder